[package]
name = "squeal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
